--- a/index.html
+++ b/index.html
@@ -2,104 +2,104 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Đọc Online </title>
+<title>Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/css/style.css">
+
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="navbar">
-<div class="nav-inner">
-<a class="logo" href="/index.html">❄ Đọc Online</a>
-<nav class="nav-menu">
-<a class="active" href="/index.html">Trang chủ</a>
-<a href="/pages/features.html">Tính năng</a>
-<a href="/pages/guide.html">Hướng dẫn</a>
-<a href="/pages/pricing.html">Giá</a>
-<a href="/pages/contact.html">Liên hệ</a>
-</nav>
-</div>
+    <div class="nav-inner">
+        <a class="logo" href="#">❄ Đọc Online</a>
+        <nav class="nav-menu">
+            <a class="active" href="#">Trang chủ</a>
+            <a href="#">Tính năng</a>
+            <a href="#">Hướng dẫn</a>
+            <a href="#">Giá</a>
+            <a href="#">Liên hệ</a>
+        </nav>
+    </div>
 </header>
 
 <main class="page">
-<section class="page-inner">
+    <section class="page-inner">
 
-<h1>Truy cập nhanh - tiện lợi - tập trung hơn</h1>
-<p>
-Đọc online là ứng dụng plugin koreader hỗ trợ đọc tốt hơn cho các máy đọc sách e-ink như android - kobo - kindle - pocketbook...
-</p>
+        <h1>Truy cập nhanh – tiện lợi – tập trung hơn</h1>
+        <p>
+            Đọc Online là plugin KOReader hỗ trợ đọc báo, truyện và tài liệu
+            tối ưu cho thiết bị e-ink.
+        </p>
 
+        <!-- ===== GRID 4 THẺ ===== -->
+        <div class="feature-grid">
 
-<div class="card-grid">
+            <div class="feature-card">
+                <div class="feature-content">
+                    <h3>📰 Đọc báo RSS 2</h3>
+                    <ul>
+                        <li>Hiển thị bài viết dạng thumbnail</li>
+                        <li>Tổng hợp nhiều đầu báo</li>
+                        <li>Tìm kiếm nội dung nhanh</li>
+                        <li>Tối ưu cho màn hình e-ink</li>
+                    </ul>
+                </div>
+                <div class="feature-image">
+                    <img src="https://haiminh2023.github.io/assets/images/rss.jpg">
+                </div>
+            </div>
 
-    <div class="feature-card">
-        <div class="feature-content">
-            <h3>📰 Đọc báo RSS - 1</h3>
-            <ul class="feature-list">
-                <li>Hiển thị bài viết dạng thumbnail</li>
-                <li>Tổng hợp nhiều đầu báo</li>
-                <li>Tìm kiếm nội dung nhanh</li>
-                <li>Đọc tối ưu cho màn hình e-ink</li>
-            </ul>
+            <div class="feature-card">
+                <div class="feature-content">
+                    <h3>📖 Đọc truyện online</h3>
+                    <ul>
+                        <li>Nhiều nguồn truyện</li>
+                        <li>Lưu chương đang đọc</li>
+                        <li>Cập nhật truyện mới</li>
+                        <li>Đọc offline</li>
+                    </ul>
+                </div>
+                <div class="feature-image">
+                    <img src="https://haiminh2023.github.io/assets/images/story.jpg">
+                </div>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-content">
+                    <h3>📚 Kho truyện chia sẻ</h3>
+                    <ul>
+                        <li>Kho truyện cộng đồng</li>
+                        <li>Phân loại rõ ràng</li>
+                        <li>Dễ dàng tải về</li>
+                    </ul>
+                </div>
+                <div class="feature-image">
+                    <img src="https://haiminh2023.github.io/assets/images/library.jpg">
+                </div>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-content">
+                    <h3>☁️ Google Drive</h3>
+                    <ul>
+                        <li>Kết nối Drive cá nhân</li>
+                        <li>Xem file được chia sẻ</li>
+                        <li>Tải sách offline</li>
+                    </ul>
+                </div>
+                <div class="feature-image">
+                    <img src="https://haiminh2023.github.io/assets/images/drive.jpg">
+                </div>
+            </div>
+
         </div>
-        <div class="feature-image">
-            <img src="https://haiminh2023.github.io/assets/images/rss.jpg">
-        </div>
-    </div>
 
-    <div class="feature-card">
-        <div class="feature-content">
-            <h3>📖 Đọc truyện online</h3>
-            <ul class="feature-list">
-                <li>Nhiều nguồn truyện khác nhau</li>
-                <li>Lưu chương đang đọc</li>
-                <li>Cập nhật truyện mới</li>
-                <li>Hỗ trợ đọc offline</li>
-            </ul>
-        </div>
-        <div class="feature-image">
-            <img src="https://haiminh2023.github.io/assets/images/story.jpg">
-        </div>
-    </div>
-
-    <div class="feature-card">
-        <div class="feature-content">
-            <h3>📚 Kho truyện chia sẻ</h3>
-            <ul class="feature-list">
-                <li>Kho truyện cộng đồng</li>
-                <li>Phân loại rõ ràng</li>
-                <li>Dễ dàng tải về</li>
-            </ul>
-        </div>
-        <div class="feature-image">
-            <img src="https://haiminh2023.github.io/assets/images/library.jpg">
-        </div>
-    </div>
-
-    <div class="feature-card">
-        <div class="feature-content">
-            <h3>☁️ Google Drive</h3>
-            <ul class="feature-list">
-                <li>Kết nối Drive cá nhân</li>
-                <li>Xem file được chia sẻ</li>
-                <li>Tải sách đọc offline</li>
-            </ul>
-        </div>
-        <div class="feature-image">
-            <img src="https://haiminh2023.github.io/assets/images/drive.jpg">
-        </div>
-    </div>
-
-</div>
-
-
-
-
+    </section>
 </main>
 
 <footer class="footer">
-© 2026 Doc Online
+    © 2026 Doc Online
 </footer>
 
 </body>
