--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
 
             <div class="feature-card">
                 <div class="feature-content">
-                    <h3>📰 Đọc báo RSS 2</h3>
+                    <h3>📰 Đọc báo RSS 11</h3>
                     <ul>
                         <li>Hiển thị bài viết dạng thumbnail</li>
                         <li>Tổng hợp nhiều đầu báo</li>
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/rss.jpg">
+                    <img src="https://haiminh2023.github.io/assets/images/rss.jpg" alt="Đọc báo RSS">
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/story.jpg">
+                    <img src="https://haiminh2023.github.io/assets/images/story.jpg" alt="Đọc truyện online">
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/library.jpg">
+                    <img src="https://haiminh2023.github.io/assets/images/library.jpg" alt="Kho truyện chia sẻ">
                 </div>
             </div>
 
@@ -89,7 +89,7 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/drive.jpg">
+                    <img src="https://haiminh2023.github.io/assets/images/drive.jpg" alt="Google Drive">
                 </div>
             </div>
 
