--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/css/style.css?v=20260209">
+<link rel="stylesheet" href="/css/style.css?v=20260210">
 </head>
 <body>
 
@@ -37,7 +37,7 @@
 
             <div class="feature-card">
                 <div class="feature-content">
-                    <h3>📰 Đọc báo RSS 11</h3>
+                    <h3>📰 Đọc báo RSS</h3>
                     <ul>
                         <li>Hiển thị bài viết dạng thumbnail</li>
                         <li>Tổng hợp nhiều đầu báo</li>
