--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/css/style.css?v=20260211">
+<link rel="stylesheet" href="/css/style.css?v=20260212">
 </head>
 <body>
 
@@ -75,7 +75,7 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/library.jpg" alt="Kho truyện chia sẻ">
+                    <img src="https://haiminh2023.github.io/assets/images/story_share.jpg" alt="Đọc báo RSS">
                 </div>
             </div>
 
@@ -89,7 +89,7 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/drive.jpg" alt="Google Drive">
+                    <img src="https://haiminh2023.github.io/assets/images/google_drive.jpg" alt="Google Drive">
                 </div>
             </div>
 
