--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/rss.jpg" alt="Đọc báo RSS">
+                    <img src="https://haiminh2023.github.io/assets/images/rss.jpg?v=1.2" alt="Đọc báo RSS">
                 </div>
             </div>
 
@@ -81,7 +81,7 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/story.jpg" alt="Đọc truyện online">
+                    <img src="https://haiminh2023.github.io/assets/images/story.jpg?v=1.2" alt="Đọc truyện online">
                 </div>
             </div>
 
