--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                 <div class="feature-content">
                     <h3>📰 Đọc báo RSS</h3>
                     <ul>
-                        <li>Hiển thị bài viết dạng thumbnail</li>
                         <li>Tổng hợp nhiều đầu báo</li>
                         <li>Tìm kiếm nội dung nhanh</li>
-                        <li>Tối ưu cho màn hình e-ink</li>
+                        <li>Truy cập danh mục yêu thích</li>
+                        <li>Tối ưu hóa nội dung bài viết</li>
                     </ul>
                 </div>
                 <div class="feature-image">
@@ -77,7 +77,7 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                         <li>Nhiều nguồn truyện</li>
                         <li>Lưu chương đang đọc</li>
                         <li>Cập nhật truyện mới</li>
-                        <li>Đọc offline</li>
+                        <li>Tải & đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
@@ -90,8 +90,9 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                     <h3>📚 Kho truyện chia sẻ</h3>
                     <ul>
                         <li>Kho truyện cộng đồng</li>
+                        <li>hơn 10K+ truyện tranh - chữ</li>
                         <li>Phân loại rõ ràng</li>
-                        <li>Dễ dàng tải về</li>
+                        <li>Tải & đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
@@ -105,7 +106,8 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                     <ul>
                         <li>Kết nối Drive cá nhân</li>
                         <li>Xem file được chia sẻ</li>
-                        <li>Tải sách offline</li>
+                        <li>Xem file drive của tôi</li>
+                        <li>Tải & đọc offline</li>
                     </ul>
                 </div>
                 <div class="feature-image">
