--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
 
 <header class="navbar">
     <div class="nav-inner">
-        <a class="logo" href="#">❄ Đọc Online</a>
+        <a class="logo" href="index.html">❄ Đọc Online</a>
         <nav class="nav-menu">
-            <a class="active" href="#">Trang chủ</a>
-            <a href="#">Tính năng</a>
-            <a href="#">Hướng dẫn</a>
-            <a href="#">Giá</a>
-            <a href="#">Liên hệ</a>
+            <a class="active" href="index.html">Trang chủ</a>
+            <a href="pages/features.html">Tính năng</a>
+            <a href="pages/guide.html">Hướng dẫn</a>
+            <a href="pages/pricing.html">Giá</a>
+            <a href="pages/contact.html">Liên hệ</a>
         </nav>
     </div>
 </header>
@@ -55,7 +55,7 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
         <!-- ===== GRID 4 THẺ ===== -->
         <div class="feature-grid">
 
-            <div class="feature-card">
+            <div class="feature-card" onclick="window.location.href='pages/features.html#rss-feature'">
                 <div class="feature-content">
                     <h3>📰 Đọc báo RSS</h3>
                     <ul>
@@ -70,7 +70,7 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                 </div>
             </div>
 
-            <div class="feature-card">
+            <div class="feature-card" onclick="window.location.href='pages/features.html#story-feature'">
                 <div class="feature-content">
                     <h3>📖 Đọc truyện online</h3>
                     <ul>
@@ -85,7 +85,7 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                 </div>
             </div>
 
-            <div class="feature-card">
+            <div class="feature-card" onclick="window.location.href='pages/features.html#library-feature'">
                 <div class="feature-content">
                     <h3>📚 Kho truyện chia sẻ</h3>
                     <ul>
@@ -100,7 +100,7 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
                 </div>
             </div>
 
-            <div class="feature-card">
+            <div class="feature-card" onclick="window.location.href='pages/features.html#drive-feature'">
                 <div class="feature-content">
                     <h3>☁️ Google Drive</h3>
                     <ul>
