--- a/pages/features.html
+++ b/pages/features.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../style.css?v=20260208">
-<link rel="stylesheet" href="features.css?v=20260208">
+<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="features.css">
 </head>
 <body>
 
@@ -26,6 +26,7 @@
 
 <main class="page">
     <section class="page-inner">
+        <!-- TIÊU ĐỀ RIÊNG CỦA TRANG TÍNH NĂNG -->
         <h1>Tính năng nổi bật</h1>
         <p>Khám phá tất cả các tính năng mạnh mẽ của plugin KOReader Đọc Online, được thiết kế đặc biệt cho thiết bị e-ink.</p>
         
