--- a/pages/features.html
+++ b/pages/features.html
@@ -97,7 +97,8 @@
                         </div>
                         
                         <div class="feature-screenshots">
-                            <img src="https://haiminh2023.github.io/assets/images/rss-detail.jpg" alt="Giao diện đọc báo RSS">
+                            <img src="https://haiminh2023.github.io/assets/images/rss.jpg?v=1.2" alt="Đọc báo RSS">
+                            <img src="https://haiminh2023.github.io/assets/images/rss(1).jpg?v=1.2" alt="Đọc báo RSS">
                         </div>
                     </div>
                 </section>
