--- a/pages/features.html
+++ b/pages/features.html
@@ -98,7 +98,7 @@
                         
                         <div class="feature-screenshots">
                             <img src="https://haiminh2023.github.io/assets/images/rss.jpg?v=1.2" alt="Đọc báo RSS">
-                            <img src="https://haiminh2023.github.io/assets/images/rss(1).jpg?v=1.2" alt="Đọc báo RSS">
+                            <img src="https://haiminh2023.github.io/assets/images/rss_1.jpg?v=1.3" alt="Đọc báo RSS">
                         </div>
                     </div>
                 </section>
