--- a/pages/features.html
+++ b/pages/features.html
@@ -112,17 +112,16 @@
                         <div class="feature-description">
                             <p>Truy cập hàng ngàn bộ truyện từ các nguồn uy tín nhất. Hỗ trợ đa dạng thể loại: tiên hiệp, huyền huyễn, đô thị, ngôn tình, xuyên không, trọng sinh, hệ thống...</p>
                             
-                            <p>Tự động lưu lại chương đang đọc, tiếp tục đọc ngay trên thiết bị khác mà không bị gián đoạn. Nhận thông báo khi truyện yêu thích có chương mới.</p>
+                            <p>Tự động lưu lại chương đang đọc, tiếp tục đọc ngay trên thiết bị hoặc các thiết bị khác mà không bị gián đoạn.</p>
                             
                             <div class="feature-highlights">
                                 <h4>Điểm nổi bật</h4>
                                 <ul>
-                                    <li>Hơn 100 nguồn truyện Việt Nam và quốc tế</li>
-                                    <li>Tự động lưu vị trí đọc, đồng bộ đa thiết bị</li>
-                                    <li>Nhận thông báo khi truyện mới cập nhật</li>
+                                    <li>Nguồn truyện đa dạng thể loại</li>
+                                    <li>Nhấn next tự động chuyển chương, tải và hiển thị</li>
+                                    <li>Tự động lưu chương đang đọc, đồng bộ đa thiết bị để đọc tiếp không gián đoạn</li>
+                                    <li>Tìm kiếm truyện theo tên, chương </li>
                                     <li>Tải truyện để đọc offline không cần mạng</li>
-                                    <li>Chế độ đêm, chế độ bảo vệ mắt</li>
-                                    <li>Tùy chỉnh font chữ, cỡ chữ, khoảng cách dòng</li>
                                 </ul>
                             </div>
                         </div>
