--- a/pages/features.html
+++ b/pages/features.html
@@ -127,7 +127,10 @@
                         </div>
                         
                         <div class="feature-screenshots">
-                            <img src="https://haiminh2023.github.io/assets/images/story-detail.jpg" alt="Giao diện đọc truyện online">
+                            <img src="https://haiminh2023.github.io/assets/images/Story_home.jpg?v=1.5" alt="Đọc truyện online">
+                            <img src="https://haiminh2023.github.io/assets/images/story_detail.jpg?v=1.5" alt="Đọc truyện online">
+                            <img src="https://haiminh2023.github.io/assets/images/Story_list.jpg?v=1.5" alt="Đọc truyện online">
+                            <img src="https://haiminh2023.github.io/assets/images/sync.jpg?v=1.5" alt="Đọc truyện online">
                         </div>
                     </div>
                 </section>
