--- a/pages/features.html
+++ b/pages/features.html
@@ -195,7 +195,10 @@
                         </div>
                         
                         <div class="feature-screenshots">
-                            <img src="https://haiminh2023.github.io/assets/images/drive-detail.jpg" alt="Giao diện kết nối Google Drive">
+                            <img src="https://haiminh2023.github.io/assets/images/google_drive.jpg?v=1.6" alt="Kết nối Google Drive">
+                            <img src="https://haiminh2023.github.io/assets/images/google_drive_1.jpg?v=1.6" alt="Kết nối Google Drive">
+                            <img src="https://haiminh2023.github.io/assets/images/google_drive_2.jpg?v=1.6" alt="Kết nối Google Drive">
+                            <img src="https://haiminh2023.github.io/assets/images/google_drive_3.jpg?v=1.6" alt="Kết nối Google Drive">
                         </div>
                     </div>
                 </section>
