--- a/pages/features.html
+++ b/pages/features.html
@@ -179,7 +179,7 @@
                         <div class="feature-description">
                             <p>Kết nối trực tiếp với Google Drive cá nhân, truy cập ngay kho sách của bạn trên đám mây. Xem cả những file được chia sẻ từ người khác một cách dễ dàng.</p>
                             
-                            <p>Hỗ trợ đa định dạng sách điện tử: EPUB, MOBI, PDF, TXT, AZW3. Tự động đồng bộ tiến độ đọc giữa các thiết bị thông qua Google Drive.</p>
+                            <p>Hỗ trợ đa định dạng sách điện tử: EPUB, MOBI, PDF, TXT, AZW3.</p>
                             
                             <div class="feature-highlights">
                                 <h4>Điểm nổi bật</h4>
@@ -188,8 +188,6 @@
                                     <li>Xem và đọc file được chia sẻ từ người khác</li>
                                     <li>Tải sách về để đọc offline không cần mạng</li>
                                     <li>Hỗ trợ đa định dạng sách điện tử</li>
-                                    <li>Đồng bộ tiến độ đọc qua đám mây</li>
-                                    <li>Bảo mật OAuth 2.0, không lưu mật khẩu</li>
                                 </ul>
                             </div>
                         </div>
