--- a/pages/features.html
+++ b/pages/features.html
@@ -80,7 +80,7 @@
                     <div class="feature-content-wrapper">
                         <div class="feature-description">
                             <p>Tính năng đọc báo RSS được tối ưu hóa cho màn hình e-ink, mang đến trải nghiệm đọc báo thoải mái, không gây mỏi mắt.</p>
-                            <p>Hỗ trợ đa dạng nhiều nguồn báo điện tử hàng đầu Việt Nam như Dân trí / Tuổi trẻ / 24h / CafeF / Thanh niên / Thể thao 247 / Vnexpress...</p>
+                            <p>Hỗ trợ kết nối nhiều nguồn báo điện tử RSS hàng đầu Việt Nam như Dân trí / Tuổi trẻ / 24h / CafeF / Thanh niên / Thể thao 247 / Vnexpress...</p>
                             <div class="feature-highlights">
                                 <h4>Điểm nổi bật</h4>
                                 <ul>
