--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -27,9 +27,7 @@
 <p>Chỉ cần 3 bước để bắt đầu với Doc Online.</p>
 
 <div class="card-grid">
-<div class="card">1️⃣ Truy cập website</div>
-<div class="card">2️⃣ Chọn nội dung</div>
-<div class="card">3️⃣ Học & lưu tiến trình</div>
+<div class="card">1️⃣ Chưa hoàn thiện</div>
 </div>
 
 </section>
