--- a/index.html
+++ b/index.html
@@ -6,42 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/css/style.css?v=20260214">
+<link rel="stylesheet" href="css/style.css?v=20260215">
 </head>
-<script>
-// Tự động điều chỉnh padding-top cho content dựa trên chiều cao header
-function adjustPagePadding() {
-    const header = document.querySelector('.navbar');
-    const page = document.querySelector('.page');
-    
-    if (header && page) {
-        const headerHeight = header.offsetHeight;
-        page.style.paddingTop = (headerHeight + 20) + 'px';
-    }
-}
-
-// Chạy khi trang tải và khi resize
-window.addEventListener('load', adjustPagePadding);
-window.addEventListener('resize', adjustPagePadding);
-
-// Cũng chạy khi DOM đã sẵn sàng
-document.addEventListener('DOMContentLoaded', adjustPagePadding);
-</script>
-    
 <body>
 
-<header class="navbar">
-    <div class="nav-inner">
-        <a class="logo" href="index.html">❄ Đọc Online</a>
-        <nav class="nav-menu">
-            <a class="active" href="index.html">Trang chủ</a>
-            <a href="pages/features.html">Tính năng</a>
-            <a href="pages/guide.html">Hướng dẫn</a>
-            <a href="pages/pricing.html">Giá</a>
-            <a href="pages/contact.html">Liên hệ</a>
-        </nav>
-    </div>
-</header>
+<!-- HEADER sẽ được tự động chèn vào đây -->
+<div id="header-placeholder"></div>
 
 <main class="page">
     <section class="page-inner">
@@ -120,9 +90,11 @@ document.addEventListener('DOMContentLoaded', adjustPagePadding);
     </section>
 </main>
 
-<footer class="footer">
-    © 2026 Doc Online
-</footer>
+<!-- FOOTER sẽ được tự động chèn vào đây -->
+<div id="footer-placeholder"></div>
+
+<!-- Load include.js -->
+<script src="js/include.js"></script>
 
 </body>
 </html>
