--- a/pages/policies.html
+++ b/pages/policies.html
@@ -176,6 +176,7 @@
                 <div class="section-content">
                     <p><strong>Mô hình hoạt động:</strong></p>
                     <div class="legal-points">
+                        <div class="legal-point">Server <strong>CHỈ lưu trữ thông tin meta</strong> (đường dẫn, tiêu đề, thumbnail)</div>
                         <div class="legal-point">Ứng dụng <strong>KHÔNG lưu trữ, phân phối hoặc sao chép</strong> nội dung bài viết gốc từ các báo điện tử</div>
                         <div class="legal-point">Ứng dụng chỉ đóng vai trò <strong>công cụ trung gian điều hướng</strong>, chuyển tiếp yêu cầu của người dùng đến website gốc</div>
                         <div class="legal-point">Dữ liệu được tải <strong>trực tiếp từ nguồn gốc</strong> về thiết bị của người dùng</div>
