--- a/pages/policies.html
+++ b/pages/policies.html
@@ -180,12 +180,15 @@
                         <div class="legal-point">Ứng dụng <strong>KHÔNG lưu trữ, phân phối hoặc sao chép</strong> nội dung bài viết gốc từ các báo điện tử</div>
                         <div class="legal-point">Ứng dụng chỉ đóng vai trò <strong>công cụ trung gian điều hướng</strong>, chuyển tiếp yêu cầu của người dùng đến website gốc</div>
                         <div class="legal-point">Dữ liệu được tải <strong>trực tiếp từ nguồn website gốc</strong> về thiết bị của người dùng</div>
+                        <div class="legal-point">Việc tải và hiển thị nội dung chỉ diễn ra khi có <strong>hành động chủ động từ người dùng</strong>, không có cơ chế tải nền hoặc tự động thu thập nội dung.</div>
+                        <div class="legal-point">Chủ sở hữu bản quyền có thể liên hệ để yêu cầu ngừng hỗ trợ hoặc gỡ bỏ liên kết đến nguồn nội dung nếu có vi phạm.</div>
+
                     </div>
                     
                     <p><strong>Xử lý nội dung hiển thị:</strong></p>
                     <div class="legal-points">
                         <div class="legal-point"><strong>Loại bỏ các thành phần không cần thiết</strong>: quảng cáo, pop-up, script chạy nền</div>
-                        <div class="legal-point"><strong>Giữ lại nội dung chính</strong>: tiêu đề, tác giả, nội dung bài viết, ảnh minh họa</div>
+                        <div class="legal-point"><strong>Tái trình bày nội dung đã được công bố công khai từ nguồn gốc ban đầu</strong>: tiêu đề, tác giả, nội dung bài viết, ảnh minh họa</div>
                         <div class="legal-point"><strong>Tái cấu trúc giao diện</strong>: điều chỉnh bố cục, font chữ, khoảng cách cho dễ đọc trên màn hình e-ink</div>
                     </div>
                     
