--- a/pages/features.html
+++ b/pages/features.html
@@ -7,37 +7,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css?v=20260215">
-<link rel="stylesheet" href="../css/features.css?v=20260215">
-<style>
-/* CSS cho multiple images */
-.feature-screenshots {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-}
-
-.feature-screenshots img {
-    width: 100%;
-    height: auto;
-    display: block;
-    transition: transform 0.5s ease;
-    border-radius: 12px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    border: 1px solid rgba(0,0,0,0.08);
-}
-
-.feature-screenshots img:hover {
-    transform: scale(1.03);
-    box-shadow: 0 8px 25px rgba(0,0,0,0.15);
-}
-
-@media (max-width: 768px) {
-    .feature-screenshots {
-        grid-template-columns: 1fr;
-        gap: 15px;
-    }
-}
-</style>
+<link rel="stylesheet" href="features.css?v=20260217">
 </head>
 <body>
 
