--- a/pages/features.html
+++ b/pages/features.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../css/style.css?v=20260215">
-<link rel="stylesheet" href="features.css?v=20260217">
+<link rel="stylesheet" href="../css/style.css?v=20260216">
+<link rel="stylesheet" href="../css/features.css?v=20260218">
 </head>
 <body>
 
@@ -200,7 +200,7 @@
 <div id="footer-placeholder"></div>
 
 <!-- Load include.js với đường dẫn tương đối -->
-<script src="../js/include.js?v=20260216"></script>
+<script src="../js/include.js?v=20260217"></script>
 
 <!-- Script riêng cho features -->
 <script>
