--- a/pages/policies.html
+++ b/pages/policies.html
@@ -96,6 +96,7 @@
         color: #dc2626;
         margin-bottom: 10px;
         font-size: 18px;
+        line-height: 1.6;
     }
     
     .note-box {
