--- a/pages/policies.html
+++ b/pages/policies.html
@@ -244,7 +244,7 @@
                 <div class="section-content">
                     <p><strong>Cơ chế hoạt động:</strong></p>
                     <div class="legal-points">
-                        <div class="legal-point">Ứng dụng <strong>CHỈ lưu trữ thông tin meta</strong> (đường dẫn, tiêu đề, thể loại, kích thước file)</div>
+                        <div class="legal-point">Ứng dụng <strong>CHỈ lưu trữ thông tin meta</strong> (đường dẫn, tiêu đề, kích thước file)</div>
                         <div class="legal-point"><strong>KHÔNG lưu trữ nội dung truyện gốc</strong> (file EPUB, PDF, MOBI, TXT)</div>
                         <div class="legal-point"><strong>Danh sách liên kết được tổng hợp tự động hoặc do người dùng đóng góp, không mang tính chọn lọc nội dung.</div>
                         <div class="legal-point">Hệ thống hoạt động như <strong>công cụ tổng hợp liên kết</strong> (link aggregator)</div>
