--- a/pages/policies.html
+++ b/pages/policies.html
@@ -306,7 +306,11 @@
                     <p><strong>Về dữ liệu người dùng:</strong></p>
                     <div class="legal-points">
                         <div class="legal-point">Không thu thập thông tin cá nhân nhạy cảm</div>
-                        <div class="legal-point">Dữ liệu đọc (lịch sử, bookmark) chỉ lưu cục bộ trên thiết bị</div>
+                        <div class="legal-point">
+                        Theo mặc định, dữ liệu đọc (lịch sử, bookmark) chỉ được lưu trữ cục bộ trên thiết bị. 
+                        Việc lưu trữ trên máy chủ để đồng bộ đa thiết bị chỉ diễn ra khi có sự cho phép rõ ràng từ người dùng.
+                    </div>
+
                         <div class="legal-point">Người dùng có thể xóa toàn bộ dữ liệu bất cứ lúc nào</div>
                     </div>
                     
