--- a/pages/policies.html
+++ b/pages/policies.html
@@ -200,7 +200,7 @@
                     <div class="legal-points">
                         <div class="legal-point"><strong>Không hiển thị các thành phần không phục vụ mục đích đọc</strong> (theo khả năng kỹ thuật của thiết bị và trình đọc).</div>
                         <div class="legal-point"><strong>Tái trình bày nội dung đã được công bố công khai từ nguồn gốc ban đầu</strong>: tiêu đề, tác giả, nội dung bài viết, ảnh minh họa</div>
-                        <div class="legal-point"><strong>Ứng dụng không chỉnh sửa, không bổ sung và không tạo nội dung mới so với nguồn gốc ban đầu.</div>
+                        <div class="legal-point"><strong>Ứng dụng không chỉnh sửa, không bổ sung và không tạo nội dung mới so với nguồn gốc ban đầu.</strong></div>
                         <div class="legal-point"><strong>Tái cấu trúc giao diện</strong>: điều chỉnh bố cục, font chữ, khoảng cách cho dễ đọc trên màn hình e-ink</div>
                     </div>
                     
@@ -228,7 +228,7 @@
                     <p><strong>Phạm vi hỗ trợ:</strong></p>
                     <div class="legal-points">
                         <div class="legal-point">Chỉ liên kết đến các website cung cấp truyện <strong>miễn phí, công khai</strong></div>
-                        <div class="legal-point">Ứng dụng không kiểm soát, không xác minh và không đảm bảo tình trạng bản quyền của nội dung tại các website bên thứ ba.</strong></div>
+                        <div class="legal-point">Ứng dụng không kiểm soát, không xác minh và không đảm bảo tình trạng bản quyền của nội dung tại các website bên thứ ba.</div>
                         <div class="legal-point">Không hỗ trợ truy cập nội dung có bản quyền hạn chế hoặc nội dung trả phí</div>
                         <div class="legal-point">Người dùng tự chịu trách nhiệm về việc lựa chọn và sử dụng nguồn truyện</div>
                     </div>
@@ -246,7 +246,7 @@
                     <div class="legal-points">
                         <div class="legal-point">Ứng dụng <strong>CHỈ lưu trữ thông tin meta</strong> (đường dẫn, tiêu đề, kích thước file)</div>
                         <div class="legal-point"><strong>KHÔNG lưu trữ nội dung truyện gốc</strong> (file EPUB, PDF, MOBI, TXT)</div>
-                        <div class="legal-point"><strong>Danh sách liên kết được tổng hợp tự động hoặc do người dùng đóng góp, không mang tính chọn lọc nội dung.</div>
+                        <div class="legal-point"><strong>Danh sách liên kết được tổng hợp tự động hoặc do người dùng đóng góp, không mang tính chọn lọc nội dung.</strong></div>
                         <div class="legal-point">Hệ thống hoạt động như <strong>công cụ tổng hợp liên kết</strong> (link aggregator)</div>
                     </div>
                     
@@ -309,7 +309,10 @@
                         <div class="legal-point">
                         Theo mặc định, dữ liệu đọc (lịch sử, bookmark) chỉ được lưu trữ cục bộ trên thiết bị. 
                         Việc lưu trữ trên máy chủ để đồng bộ đa thiết bị chỉ diễn ra khi có sự cho phép rõ ràng từ người dùng.
-                    </div>
+                        </div>
+                        <div class="legal-point">
+                            Người dùng có thể tắt hoặc bật tính năng đồng bộ dữ liệu bất kỳ lúc nào trong phần cài đặt.
+                        </div>
 
                         <div class="legal-point">Người dùng có thể xóa toàn bộ dữ liệu bất cứ lúc nào</div>
                     </div>
