--- a/pages/versions.html
+++ b/pages/versions.html
@@ -7,7 +7,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css?v=20260215">
-<link rel="stylesheet" href="version-style.css?v=20260216">
+<link rel="stylesheet" href="../css/version.css?v=20260216">
 </head>
 <body>
 
