--- a/pages/versions.html
+++ b/pages/versions.html
@@ -72,7 +72,7 @@
 <script src="../js/include.js?v=20260216"></script>
 
 <!-- File JSON riêng biệt để dễ quản lý -->
-<script src="version-data.json?v=20260217"></script>
+<script src="../json/version.json?v=20260217"></script>
 
 <!-- Script chính -->
 <script>
