--- a/pages/versions.html
+++ b/pages/versions.html
@@ -128,7 +128,7 @@ document.addEventListener('DOMContentLoaded', function() {
                         <h4>Cập nhật chi tiết</h4>
                         <ul>
                             ${version.features.map(feature => `
-                                <li>${feature.title}</li>
+                                <li class="feature-main">${feature.title}</li>
                                 ${feature.description ? `
                                     <li class="feature-sub">
                                         <span class="sub-bullet">-</span>
