--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/rss.jpg?v=1.2" alt="Đọc báo RSS">
+                    <img src="https://haiminh2023.github.io/assets/images/rss_home.jpg?v=1.3" alt="Đọc báo RSS">
                 </div>
             </div>
 
