--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 <main class="page">
     <section class="page-inner">
 
-        <h1>Truy cập nhanh – tiện lợi – tập trung hơn</h1>
-        <p>
-            Đọc Online là plugin KOReader hỗ trợ đọc báo, truyện và tài liệu
-            tối ưu cho thiết bị e-ink.
-        </p>
+        <h1>Đọc Online là plugin KOReader hỗ trợ đọc báo, truyện và tài liệu tối ưu cho thiết bị e-ink.</h1>
 
         <!-- ===== GRID 4 THẺ ===== -->
         <div class="feature-grid">
