--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <main class="page">
     <section class="page-inner">
 
-        <h1>Đọc Online là plugin KOReader hỗ trợ đọc báo, truyện và tài liệu tối ưu cho thiết bị máy đọc sách e-ink.</h1>
+        <h1>Đọc Online là plugin KOReader hỗ trợ đọc tối ưu cho thiết bị máy đọc sách e-ink.</h1>
 
         <!-- ===== GRID 4 THẺ ===== -->
         <div class="feature-grid">
