--- a/pages/features.html
+++ b/pages/features.html
@@ -28,7 +28,7 @@
                         <div class="sidebar-icon">📰</div>
                         <div class="sidebar-content">
                             <h3>Đọc báo RSS</h3>
-                            <p>Cập nhật tin tức trên e-ink</p>
+                            <p>Cập nhật tin tức mới nhất</p>
                         </div>
                     </div>
                     
