--- a/pages/versions.html
+++ b/pages/versions.html
@@ -109,7 +109,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 <div class="sidebar-card ${isActive ? 'active' : ''}" 
                      data-index="${index}" 
                      data-version="${version.version}">
-                    <div class="sidebar-icon">📱</div>
+                    <div class="sidebar-icon">📘</div>
                     <div class="sidebar-content">
                         <h3>${versionNumber}</h3>
                         <p>${version.date} ${version.isLatest ? '• Mới nhất' : ''}</p>
